# algolabra-dungen

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml
.github/workflows/: main.yml
documentation/: project_implementation.md  project_specification.md  testing_report.md  user_guide.md  weekly_report_1.md  weekly_report_2.md  weekly_report_3.md  weekly_report_4.md  weekly_report_5.md  weekly_report_6.md
src/: a_star.py  bowyer_watson.py  config.py  game_loop.py  index.py  popup.py  prim.py  rooms.py
src/tests/: a_star_test.py  bowyer_watson_test.py  prim_test.py  rooms_test.py
